actualizacion indicadores febrero 2024

--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -230,7 +230,7 @@
 
                     <h3>Ingreso por kilómetro</h3>
 
-                    <dx-data-grid #priceDataGrid [dataSource]="precioMeta" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true" [allowColumnResizing]="true" [allowColumnReordering]="false"
+                    <dx-data-grid #priceDataGrid [dataSource]="precioMeta24" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true" [allowColumnResizing]="true" [allowColumnReordering]="false"
                     [columnAutoWidth]="true" [showBorders]="true" (onCellPrepared)="onCellPreparedPM2024($event)">
                        
                        <dxi-column dataField="operacion" caption="Descripción" [fixed]="true" [width]="180"></dxi-column>
